--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -30,6 +30,12 @@ pipeline {
             }
         }
         stage('Deliver') {
+             agent {
+                    docker {
+                                image 'maven:3.9.0'
+                                args '-v /root/.m2:/root/.m2'
+                            }
+                    }
             steps {
                 sh './jenkins/scripts/deliver.sh'
             }
