--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,6 +21,7 @@ pipeline {
                             }
                     }
             steps {
+                echo 'testing'
                 sh 'mvn test'
             }
             post {
